@@ -15,6 +15,7 @@
 - Composer and FramingTransposer: allow the dead zone to extend to 2, and the Screen x,Y can range from -1.5 to 1.5
 - Added optional "Display Name" field to Cinemachine Shot in Timeline
 - Added "Adopt Current Camera Settings" item to vcam inspector context menu
+- HDRP: lens presets include physical settings if physical camera
 - Regression Fix: Framing Transposer: ignore LookAt target.  Use Follow exclusively
 - Bugfix: added EmbeddedAssetHelper null check
 - Bugfix: composer screen guides drawn in correct place for physical camera
